// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart should render a PieChart with a tooltip 1`] = `
<TooltipTrigger
  label="myToolTip"
  tooltipPlacement="top"
>
  <span>
    <withI18nextTranslation(PieChartIcon)
      display="small"
      label="myToolTip"
      labelIndex={0}
      minimumPercentage={5}
      t={[Function]}
    />
  </span>
</TooltipTrigger>
`;

exports[`PieChart should render a PieChartButton 1`] = `
<PieChartButton
  available={true}
  onClick={[MockFunction]}
  overlayId="pie-chart-popover"
  overlayPlacement="bottom"
/>
`;

exports[`PieChart should render a PieChartIcon 1`] = `
<withI18nextTranslation(PieChartIcon)
  display="small"
  label="myToolTip"
  labelIndex={0}
  minimumPercentage={5}
  t={[Function]}
/>
`;
